--- a/Resources/Prototypes/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/Damage/modifier_sets.yml
@@ -296,3 +296,13 @@
     Cellular: 0.0
     Heat: 2.5
     Caustic: 0.0
+
+# terminator's flesh damage set
+- type: damageModifierSet
+  id: CyberneticFlesh
+  coefficients:
+    Blunt: 0.9
+    Slash: 0.9
+    Piercing: 0.9
+    Heat: 1.5
+    Shock: 2.5
