--- a/Resources/Prototypes/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/Damage/modifier_sets.yml
@@ -297,12 +297,11 @@
     Heat: 2.5
     Caustic: 0.0
 
-# terminator's flesh damage set
 - type: damageModifierSet
-  id: CyberneticFlesh
+  id: Borg
   coefficients:
-    Blunt: 0.9
-    Slash: 0.9
-    Piercing: 0.9
+    Blunt: 0.8
+    Slash: 0.8
+    Piercing: 0.8
     Heat: 1.5
     Shock: 2.5
