--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -149,6 +149,7 @@
   - type: Flashable
   - type: Damageable
     damageContainer: Silicon
+    damageModifierSet: Borg
   - type: Destructible
     thresholds:
     - trigger:
